# soil-moisture

esp8266-controller/: esp8266-controller.ino
listener/: .env  Dockerfile  docker-compose.yml  pyproject.toml  shell.nix
listener/listener/: __main__.py  config.py  database.py  init_db.py  main.py  models.py  startup.sh
